# DRT-OPT-Demand-Responsive-Transit-Optimization

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: download_data.py  run_experiment.py
src/drt_opt/: __init__.py  cli.py  config.py
src/drt_opt/data/: __init__.py  download.py  loader.py  od_generator.py
src/drt_opt/dispatch/: __init__.py  base.py  baseline.py  constraints.py  gpu_optimized.py  insertion.py  optimized.py
src/drt_opt/gpu/: __init__.py  backend.py
src/drt_opt/graph/: __init__.py  travel_matrix.py
src/drt_opt/metrics/: __init__.py  collector.py
src/drt_opt/models/: __init__.py  request.py  route.py  stop.py  vehicle.py
src/drt_opt/simulation/: __init__.py  engine.py  events.py  recorder.py  snapshot.py  state.py
src/drt_opt/tuning/: __init__.py  weight_optimizer.py
src/drt_opt/viz/: __init__.py  comparison.py  map.py
src/drt_opt/web/: __init__.py  app.py  service.py
src/drt_opt/web/static/: app.js  index.html  style.css
tests/: test_dispatch.py  test_tuning.py  test_web.py
