[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drt-opt"
version = "0.1.0"
description = "Demand-responsive transit dynamic dispatch optimization for Incheon I-MOD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
    "folium>=0.15",
    "torch>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]
gpu = [
    "torch>=2.1",
]

[project.scripts]
drt-opt = "drt_opt.cli:main"

[tool.setuptools.package-data]
"drt_opt.web" = ["static/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
